--- a/app.json
+++ b/app.json
@@ -25,11 +25,14 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
+      "usesCleartextTraffic": true,  
       "permissions": [
         "READ_EXTERNAL_STORAGE",
         "WRITE_EXTERNAL_STORAGE",
-        "CAMERA"
-      ]
+        "CAMERA",
+         "INTERNET",
+         "ACCESS_NETWORK_STATE"  
+      ] 
     },
     "web": {
       "favicon": "./assets/favicon.png"
