--- a/package.json
+++ b/package.json
@@ -15,16 +15,18 @@
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/stack": "^7.4.10",
     "axios": "^1.13.1",
-    "expo": "~54.0.13",
-    "expo-image-picker": "~16.0.5",
+    "expo": "54.0.22",
+    "expo-image-picker": "~17.0.8",
+    "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.14.0",
+    "react-native-svg": "15.12.1",
     "react-native-vector-icons": "^10.3.0"
   },
   "private": true
