--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^7.4.10",
     "axios": "^1.13.1",
     "expo": "54.0.22",
+    "expo-dev-client": "~6.0.18",
     "expo-image-picker": "~17.0.8",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
