--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/stack": "^7.4.10",
     "axios": "^1.13.1",
-    "expo": "54.0.22",
+    "expo": "~54.0.25",
     "expo-dev-client": "~6.0.18",
     "expo-image-picker": "~17.0.8",
-    "expo-splash-screen": "~31.0.10",
+    "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
